# store

./: .Cargo.toml.swp  Cargo.toml  plan.txt
src/: config.rs  main.rs
src/chunksplitter/: chunksplitter.rs  default.rs  mod.rs
src/encdec/: default.rs  mod.rs
src/filestream/: localfile.rs  mod.rs
src/index/: mod.rs
src/uploader/: local_uploader.rs  mod.rs
